test ajax requests login

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <title><%= webpackConfig.metadata.title %></title>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
     <!-- base url -->
     <base href="<%= webpackConfig.metadata.baseUrl %>">
 </head>
