--- a/client/src/componets/app/app.html
+++ b/client/src/componets/app/app.html
@@ -1,16 +1,26 @@
 <header>
+    <h1>Coffee shop reviews</h1>
+    <h2 *ngIf="currentUser">Hello {{currentUser.email}}</h2>
     <nav>
-        <h1>Hello {{ name }}</h1>
         <ul>
-            <li router-active>
-                <a [routerLink]=" ['Index'] ">Index</a>
+            <!-- <li>
+                 <a [routerLink]="['all-reviews']" router-active>All reviews</a>
+             </li>
+             <li [hidden]="currentUser">
+                 <a [routerLink]="['sign-up']" router-active>Sign up</a>
+             </li>
+             <li [hidden]="!currentUser">
+                 <a [routerLink]="['my-reviews']" router-active>My Reviews</a>
+             </li>
+             <li [hidden]="!currentUser">
+                 <a [routerLink]="['add-review']">Add Review</a>
+             </li>-->
+            <li [hidden]="currentUser">
+                <a [routerLink]="['Login']">Log in</a>
             </li>
-            <li router-active>
-                <a [routerLink]=" ['Home'] ">Home</a>
-            </li>
-            <li router-active>
-                <a [routerLink]=" ['About'] ">About</a>
-            </li>
+           <!-- <li [hidden]="!currentUser">
+                <a [routerLink]="['logout']">Log out</a>
+            </li>-->
         </ul>
     </nav>
 </header>
